--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fdanesse.cardsviews">
+
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
 
     <application
@@ -9,7 +10,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".detalle.DetalleActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity
+            android:name=".detalle.DetalleActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".contacto.ContactoActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".acercade.AcercadeActivity"></activity>
     </application>
 
 </manifest>
