--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.fdanesse.cardsviews">
 
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +24,10 @@
         <activity
             android:name=".contacto.ContactoActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".acercade.AcercadeActivity"></activity>
+        <activity
+            android:name=".acercade.AcercadeActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
